Fixed PhoneTopBar positioning
-Added invisible box to block elements from being placed under PhoneTopBar component

--- a/front-end/src/components/PhoneTopBar.module.css
+++ b/front-end/src/components/PhoneTopBar.module.css
@@ -2,6 +2,12 @@ div {
   display: inline-block;
 }
 
+.container {
+  position: relative;
+  height: 52px;
+  width: 430px;
+}
+
 .phone_time {
   margin: 16px 24px;
   font-size: 14px;
